--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  border-top: 3px solid #8cc63f;
+  background-color: #084256;
+}
